feat: support for apex to ts interface type conversion

--- a/input-code/ApexFile.cls
+++ b/input-code/ApexFile.cls
@@ -1,6 +1,29 @@
 public with sharing class ProposalController {
     private static final String PROPOSAL_SERVICE = new ProposalService();
 
+	@AuraEnabled
+	public Id proposalId;
+	@AuraEnabled
+	public Date proposalStartDate;
+	@AuraEnabled
+    public Int count;
+    @AuraEnabled
+    public int count2;
+	@AuraEnabled
+    public String[] supportedCountries;
+    @AuraEnabled
+    public List<String> supportedPlanets;
+    @AuraEnabled
+    public Map<String, String[]> countriesToPlanet;
+    @AuraEnabled
+    public Map<String, CityLocation[]> countryToCities;
+    @AuraEnabled
+    public Map<String, Map<String, CityLocation[]>> planetCountryCities;
+    @AuraEnabled
+    public MyClass.InnerType customTypeVar;
+	@AuraEnabled
+    public String country { get; set; }
+
     // parser should stub out this method in typescript
 	@AuraEnabled
 	public static Boolean isAccountValid(String accountId) {
