fix: should write types when iterating over type arguments

--- a/input-code/ApexFile.cls
+++ b/input-code/ApexFile.cls
@@ -24,6 +24,8 @@ public with sharing class ProposalController {
     @AuraEnabled
     public Map<String, Map<String, CityLocation[]>> planetCountryCities;
     @AuraEnabled
+    public Map<String, Map<String, List<CityLocation>>> planetCountryCityLocations;
+    @AuraEnabled
     public MyClass.InnerType customTypeVar;
 
     // parser should stub out this method in typescript
